[gd_scene load_steps=7 format=2]

[ext_resource path="res://interfaces/overworld/OverWorldLevelPreview.gd" type="Script" id=1]
[ext_resource path="res://interfaces/overworld/textures/preview_placeholder.png" type="Texture" id=2]
[ext_resource path="res://theme/fonts/resources/SFPixelate.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://interfaces/overworld/textures/icon_green.png" type="Texture" id=4]
[ext_resource path="res://interfaces/overworld/textures/dot.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="OverWorldLevelPreview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Preview" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL TITLE"
align = 1
autowrap = true

[node name="Orb" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
texture = ExtResource( 4 )

[node name="LeftDor" type="TextureRect" parent="."]
margin_top = 238.0
margin_right = 225.0
margin_bottom = 250.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="RightDot" type="TextureRect" parent="."]
margin_left = 255.0
margin_top = 238.0
margin_right = 479.0
margin_bottom = 250.0
texture = ExtResource( 5 )
stretch_mode = 2
